--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,15 @@
   "compilerOptions": {
     "target": "es2020",
     "module": "esnext",
-    "strict": true,
+    "strict": false,
     "esModuleInterop": true,
     "moduleResolution": "node",
     "skipLibCheck": true,
-    "noUnusedLocals": true,
-    "noImplicitAny": true,
+    "noImplicitOverride": false,
+    "noImplicitThis": false,
+    "forceConsistentCasingInFileNames": true,
+    "noUnusedLocals": false,
+    "noImplicitAny": false,
     "allowJs": true,
     "noEmit": true,
     "outDir": "dist",
