--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
     "noImplicitAny": false,
     "allowJs": true,
     "noEmit": true,
-    "outDir": "dist",
-    "resolveJsonModule": true
-  }
+    "outDir": "dist",   
+    "resolveJsonModule": true,
+    "rootDir": "."
+  },
+
+  "files": ["./src/types.d.ts"]
 }
