--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,8 @@
     "typeRoots": ["./node_modules/@types", "./src"]
   },
 
+   "files": ["./src/types.d.ts"],
+
   "include": [
     "src/**/*.ts",
     "test/setupTests.ts" // Ensure this is included
